# Face-Detection-Blurr-for-Cpp

./: CMakeLists.txt  README.md
include/: functions.hpp
src/: functions.cpp  main.cpp
